[project]
name = "jstage-mcp"
version = "2.0.3"
description = "MCP stdio server for the J-STAGE WebAPI (Japanese scholarly journals)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Christopher Gerteis", email = "christopher.gerteis@gmail.com" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "j-stage",
    "jstage",
    "japanese-studies",
    "east-asian-studies",
    "digital-humanities",
    "bibliographic-search",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.urls]
Homepage = "https://www.christophergerteis.net"
Repository = "https://github.com/ckgerteis/jstage-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py", "mediation.py"]
